Add lat/long pairs to TrackPlay Tx
