# pkg/core/gen/core_proto/protocol.swagger.json
@@ -542,6 +542,14 @@
         },
         "country": {
           "type": "string"
+        },
+        "latitude": {
+          "type": "number",
+          "format": "double"
+        },
+        "longitude": {
+          "type": "number",
+          "format": "double"
         }
       }
     },
